--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#端口号
 server.port=8080
 #配置数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -6,7 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis配置
 mybatis.type-aliases-package=com.example.graduationproject.pojo
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#sql打印
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl 
 #连接池配置
 spring.datasource.url=jdbc:mysql://101.132.33.149:3306/Fengxutong?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowMultiQueries=true
 spring.datasource.username=root
